--- a/src/main/resources/templates/Complementos/footer.html
+++ b/src/main/resources/templates/Complementos/footer.html
@@ -1,5 +1,22 @@
 <footer>
-    <div class="footerS">
-        <p>Copyright © 2024 VidaPlena</p>
+    <div class="footer_top">
+        <div class="footer_img">
+            <img src="assets/img/footer.jpg" alt="" />
+        </div>
+        <div class="footer_us">
+            <h3>NOSOTROS</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="">Misión y visión</a></li>
+            </ul>
+        </div>
+        <div class="footer_networks">
+            <h3>SÍGUENOS</h3>
+            <a href="https://www.facebook.com/centromedicodevida" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/clinica_vidasalud/?hl=es" target="_blank"><i class="bi bi-instagram"></i></a>
+        </div>
+    </div>
+    <div class="footer_bottom">
+        <p>VidaSalud 2024 © - Todos los derechos reservados por Vida Salud.</p>
     </div>
 </footer>
