--- a/src/main/resources/templates/especialidades.html
+++ b/src/main/resources/templates/especialidades.html
@@ -3,21 +3,64 @@
 <head>
     <div th:replace="Complementos/head :: head"></div>
     <title>Especialidades</title>
+
+    <link rel="stylesheet" href="assets/css/medicinaE.css" />
 </head>
 <body>
     <header>
         <div th:replace="Complementos/header :: header"></div>
     </header>
-      <div class="contenedor_especialidades">
 
-          <a th:href="@{/medicinaGeneral}"><img src="assets/img/medicinaG.png" alt=""><p>Medicina General</p></a>
-          <a th:href="@{/ginecologia}"><img src="assets/img/ginecologia.png" alt=""><p>Ginecología</p></a>
-          <a th:href="@{/odontologia}"><img  src="assets/img/odontologia.png" alt=""><p>Odontología</p></a>
-          <a th:href="@{/nutricionista}"><img src="assets/img/nutricionista.png" alt=""><p>Nutricionista</p></a>
-          <a th:href="@{/psicologia}"><img src="assets/img/psicologo.png" alt=""><p>Psicología</p></a>
-          <a th:href="@{/cardiologia}"><img src="assets/img/cardiologia.png" alt=""><p>Cardiología</p></a>
 
-      </div>
+    <!-- Especialidades -->
+    <section class="containerEspecialidades">
+        <div class="types_especialidades">
+            <a th:href="@{/medicinaGeneral}">
+                <img src="assets/img/medicinaG.png" alt="" />
+                <p>MEDICINA GENERAL</p>
+            </a>
+        </div>
+        <div class="types_especialidades">
+            <a th:href="@{/ginecologia}">
+                <img src="assets/img/ginecologia.png" alt="" />
+                <p>GINECOLOGÍA</p>
+            </a>
+        </div>
+        <div class="types_especialidades">
+            <a th:href="@{/odontologia}">
+                <img src="assets/img/odontologia.png" alt="" />
+                <p>ODONTOLOGÍA</p>
+            </a>
+        </div>
+        <div class="types_especialidades">
+            <a th:href="@{/nutricionista}">
+                <img src="assets/img/nutricionista.png" alt="" />
+                <p>NUTRICIONISTA</p>
+            </a>
+        </div>
+        <div class="types_especialidades">
+            <a th:href="@{/psicologia}">
+                <img src="assets/img/psicologo.png" alt="" />
+                <p>PSICOLOGÍA</p>
+            </a>
+        </div>
+        <div class="types_especialidades">
+            <a th:href="@{/cardiologia}">
+                <img src="assets/img/cardiologia.png" alt="" />
+                <p>CARDIOLOGÍA</p>
+            </a>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
     <footer>
         <div th:replace="Complementos/footer :: footer"></div>
     </footer>
