--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -238,3 +238,19 @@ img {
   font-size: 20px;
   line-height: 60px;
 }
+
+/* FOOTER */
+.footerS{
+    width: 100%;
+    height: 10vh;
+    background-color: hsl(232, 64%, 86%);
+    position: relative;
+    top: 122px;
+}
+.footerS p{
+    color: black;
+    text-align: center;
+    font-size: 18px;
+    position: relative;
+    top: 25px;
+}
