--- a/src/main/resources/templates/EspecUser/ginecologia.html
+++ b/src/main/resources/templates/EspecUser/ginecologia.html
@@ -3,89 +3,89 @@
 <head>
     <div th:replace="Complementos/head :: head"></div>
     <title>Ginecologia</title>
+
+    <link rel="stylesheet" href="assets/css/medicinaE.css" />
 </head>
 <body>
     <header>
         <div th:replace="Complementos/header :: header"></div>
     </header>
 
-        <div class="contenedor_medicina">
-            <div class="contenedor_information">
-                <h1>Ginecología</h1>
-                <p>Atención en la salud femenina, enfocada en el sistema reproductivo, cuidado prenatal, manejo del embarazo y tratamiento de condiciones ginecológicas.</p>
-            </div>
-            <div class="contenedor_detalles">
-                <div class="contenedor_detalles_img">
-                    <img src="assets/img/docGinecologia.jpg" alt="">
-                </div>
-                <div class="contenedor_detalles_inf">
-                  <h2>González Rivera Ana María </h2>
-                    <p>Colegiatura: 44558</p>
-                  <div class="contenedor_telefono">
-                     <div class="contenedor_detalles_telefono">
-                           <img src="assets/img/telefono.png" alt="">
-                     </div>
-                     <div class="contenedor_detalles_datos">
-                        <p>(511) 244 2224 - (511) 224 2227</p>
-                     </div>
-                  </div>
-                </div>
+
+    <!--Button-->
+    <button><a href="especialidades.html">Atrás</a></button>
+    <!-- Doctors -->
+    <section class="container_doctors">
+        <div class="doctors_title">
+            <div class="title_info">
+                <h2>Ginecología</h2>
+                <p>
+                    Atención del embarazo, parto y puerperio, así como las enfermedades
+                    del sistema reproductor femenino
+                </p>
             </div>
         </div>
+        <div class="doctors_info">
+            <div class="info_img">
+                <img src="assets/img/ginecologia1.png" alt="" />
+            </div>
+            <div class="info_text">
+                <h3>Quispe Prado José Santos</h3>
+                <p>Colegiatura: 08693</p>
+                <p>
+                    <img src="assets/img/telefono.png" alt="" />(511) 244 2224 -
+                    (511) 224 2226
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- Educación profesional-->
+    <section class="profesionalE">
+        <h2>Educación Profesional</h2>
+        <div class="table">
+            <div class="table_left">
+                <div class="left_img">
+                    <img src="assets/img/icon.png" alt="" />
+                    <p><span>Especialidad: </span>Ginecología</p>
+                </div>
+            </div>
+            <div class="table_right">
+                <p class="as"><span>Profesión: </span> Ginecólogo</p>
+            </div>
+            <div class="table_left color1">
+                <div class="left_img">
+                    <img src="assets/img/icon.png" alt="" />
+                    <p>Universidad Nacional Mayor De San Marcos</p>
+                </div>
+            </div>
+            <div class="table_right color2">
+                <p class="as"><span>Profesión: </span> Médico Cirujano</p>
+            </div>
+            <div class="table_left">
+                <div class="left_img">
+                    <img src="assets/img/icon.png" alt="" />
+                    <p>Universidad Autónoma De México</p>
+                </div>
+            </div>
+            <div class="table_right">
+                <p class="as">
+                    <span>1ra Especialización: </span> Ginecología Y Obstetricia
+                </p>
+            </div>
+            <div class="table_left color1">
+                <div class="left_img">
+                    <img src="assets/img/icon.png" alt="" />
+                    <p>Universidad Autónoma De México</p>
+                </div>
+            </div>
+            <div class="table_right color2">
+                <p class="as">
+                    <span>2da Especialización: </span> Medicina Perinatal.
+                </p>
+            </div>
+        </div>
+    </section>
 
-        <div class="contenedor_profesional">
-         <h2 class="contenedor_profesional_h2">
-            Educación Profesional
-         </h2>
-         <div class="contenedor_especialidad">
-            <div class="especialidad_information">
-               <div class="information_img">
-                  <img src="assets/img/icon-1.png" alt="">
-               </div>
-               <div class="information_h2">
-                  <h2>Especialidad: Medicina General</h2>
-               </div>
-            </div>
-
-            <div class="especialidad_information">
-               <div class="information_h2 da">
-                  <h2 >1ra Especialización: Medicina General</h2>
-               </div>
-            </div>
-         </div>
-         <div class="contenedor_especialidad">
-
-            <div class="especialidad_information">
-               <div class="information_img">
-                  <img src="assets/img/icon-1.png" alt="">
-               </div>
-               <div class="information_h2">
-                  <h2>Universidad Nacional Federico Villarreal</h2>
-               </div>
-            </div>
-            <div class="especialidad_information">
-               <div class="information_h2 de">
-                  <h2>Profesión: Médico General</h2>
-               </div>
-            </div>
-         </div>
-
-         <div class="contenedor_especialidad">
-            <div class="especialidad_information">
-               <div class="information_img">
-                  <img src="assets/img/icon-1.png" alt="">
-               </div>
-               <div class="information_h2">
-                  <h2>Universidad Nacional Mayor De San Marcos</h2>
-               </div>
-            </div>
-            <div class="especialidad_information">
-               <div class="information_h2 di">
-                  <h2>2da Especialización: Medicina Interna</h2>
-               </div>
-            </div>
-         </div>
-      </div>
     <footer>
         <div th:replace="Complementos/footer :: footer"></div>
     </footer>
