--- a/src/main/resources/templates/citas.html
+++ b/src/main/resources/templates/citas.html
@@ -19,7 +19,10 @@
         </div>
     </div>
      <div class="container">
-        <div class="col">
+         <div class="row justify-content-md-center">
+
+        <div class="col-11">
+
             <table class="table table-striped table-white">
                 <thead>
                     <tr>
@@ -36,7 +39,9 @@
 
                 </tbody>
             </table>
+
         </div>
+     </div>
      </div>
 
 
