--- a/src/main/resources/templates/medicos.html
+++ b/src/main/resources/templates/medicos.html
@@ -9,57 +9,39 @@
     <header>
         <div th:replace="Complementos/headerAdmin :: header"></div>
     </header>
+    <div class="container">
+        <div class ="row justify-content-md-center">
 
+            <div class="col-10">
+        <div class ="row justify-content-md-center">
+        <div class="text-center">
+            <h1 class="display-5 mb-5"><strong>Medicos </strong></h1>
+        </div>
+        <div class="container">
+            <div class ="row justify-content-md-center">
+                <div class="col-12">
+                    <button onclick="añadirMed()" class="btn btn-light"><b>Añadir Medico</b></button>
+                </div>
+            </div>
+        </div>
+        </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="container">
+            <div class ="row justify-content-md-center">
 
-        <div class="container-fluid">
-            <div class="text-center">
-               <h1 class="display-5 mb-5"><strong>Medicos </strong></h1>
-            </div>
-            <div class="row justify-content-center">
-               <form action="" class="row justify-content-center mb-4" autocomplete="">
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">ESPECIALIDAD</label>
-                     <input class="form-control" type="text" placeholder="ESPECIALIDAD">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">NOMBRES</label>
-                     <input class="form-control" type="text" placeholder="NOMBRES">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">APELLIDOS</label>
-                     <input class="form-control" type="text" placeholder="APELLIDOS">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">DNI</label>
-                     <input class="form-control" type="text" placeholder="DNI">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">TELÉFONO</label>
-                     <input class="form-control" type="text" placeholder="TELÉFONO">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">EMAIL</label>
-                     <input class="form-control" type="email" placeholder="EMAIL">
-                  </div>
-                  <div class="col-10 col-md-8">
-                     <input class="btn btn-success add-btn" type="submit" value="ENVIAR">
-                  </div>
-               </form>
-            </div>
-            <div class="col">
+            <div class="col-10">
                <table class="table table-striped table-white">
                   <thead>
                      <tr>
-                         <th>ID</th>
-                         <th>ID_ESPECIALIDAD</th>
+                         <th>CODIGO</th>
                          <th>NOMBRES</th>
                          <th>APELLIDOS</th>
                          <th>DNI</th>
-                         <th>DIRECCION</th>
                          <th>TELÉFONO</th>
                          <th>EMAIL</th>
-                         <th>COLEGIATURA</th>
-                         <th>FECHA_NACIMIENTO</th>
                          <th>ACCIONES</th>
                      </tr>
                   </thead>
@@ -68,7 +50,9 @@
                   </tbody>
                </table>
             </div>
+            </div>
         </div>
+    </div>
     <footer>
         <div th:replace="Complementos/footer :: footer"></div>
     </footer>
