--- a/src/main/resources/templates/pacientes.html
+++ b/src/main/resources/templates/pacientes.html
@@ -8,52 +8,17 @@
     <header>
         <div th:replace="Complementos/headerAdmin :: header"></div>
     </header>
-        <div class="container-fluid">
+        <div class="container">
             <div class="text-center">
-               <h1 class="display-5 mb-5"><strong>Citas</strong></h1>
+               <h1 class="display-5 mb-5"><strong>Pacientes</strong></h1>
             </div>
-            <div class="row justify-content-center">
-               <form action="" class="row justify-content-center mb-4" autocomplete="">
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">NOMBRES</label>
-                     <input class="form-control" type="text" placeholder="NOMBRES">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">APELLIDOS</label>
-                     <input class="form-control" type="text" placeholder="APELLIDOS">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                     <label for="">DNI</label>
-                     <input class="form-control" type="text" placeholder="DNI">
-                  </div>
-                  <div class="col-10 col-md-8 mb-3">
-                    <label for="">TELÉFONO</label>
-                    <input class="form-control" type="text" placeholder="TELÉFONO">
-                 </div>
-                 <div class="col-10 col-md-8 mb-3">
-                    <label for="">EMAIL</label>
-                    <input class="form-control" type="email" placeholder="EMAIL">
-                 </div>
-                 <div class="col-10 col-md-8 mb-3">
-                    <label for="">FECHA DE NACIMIENTO</label>
-                    <input class="form-control" type="date" placeholder="FECHA DE NACIMIENTO">
-                 </div>
-                 <div class="col-10 col-md-8 mb-3">
-                    <label for="">GÉNERO</label>
-                    <input class="form-control" type="text" placeholder="GÉNERO">
-                 </div>
-                  <div class="col-10 col-md-8">
-                     <input class="btn btn-success add-btn" type="submit" value="Guardar">
-                  </div>
-               </form>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class ="col">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class ="col-12">
                         <table class="table table-striped table-white">
                           <thead>
                              <tr>
-                                <th>ID</th>
+                                <th>CODIGO</th>
                                 <th>NOMBRES</th>
                                 <th>APELLIDOS</th>
                                 <th>DNI</th>
