--- a/src/main/resources/templates/planSalud.html
+++ b/src/main/resources/templates/planSalud.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<title>planSalud</title>
-<style>
-    .body { font-family: Arial, sans-serif; color: #fff; margin: 0; padding: 0; }
-  .section { width: 100%; display: flex; flex-wrap: wrap; box-sizing: border-box; transition: transform 0.3s ease; }
-  .text-container, .image-container { width: calc(50% - 40px); box-sizing: border-box; transition: transform 0.3s ease; margin: 20px;border-radius: 15px; }
-  .beneficios .text-container { background-color: #66BB6A; padding: 20px; }
-  .requisitos .text-container { background-color: #42A5F5; padding: 20px; }
-  .section h2 { color: #fff; font-weight: bold; font-size: 1.5em; }
-  .list-item { margin-bottom: 10px; color: #fff; font-weight: bold; }
-  .check-icon { margin-right: 10px; }
-  .horario { text-align: center; color: #fff; font-weight: bold; margin-top: 20px; }
-  footer { text-align: center; margin-top: 20px; color: #fff; font-weight: bold; }
-  .image-container img { width: 100%; height: auto; object-fit: cover; transition: transform 0.3s ease; border-radius: 15px;}
-
-  .section:hover .text-container, .section:hover .image-container { transform: scale(1.05); }
-</style>
+<title>Plan Salud - Vida Salud</title>
     <div th:replace="Complementos/head :: head"></div>
-    <title>Pacientes</title>
+
 </head>
 <body>
 
@@ -26,48 +11,151 @@
     <div th:replace="Complementos/header :: header"></div>
 </header>
 
-<main class="container">
-    <section class="section beneficios">
-        <div class="text-container">
+<section class="planSalud">
+    <div class="planSalud_title">
+        <p>Beneficios</p>
+        <h2>PlanSalud</h2>
+        <p>
+            PlanSalud de la Clínica Vida Salud te brinda la oportunidad de recibir
+            los mejores beneficios en nuestros servicios
+        </p>
+    </div>
+</section>
+<section class="consultas">
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Consulta externa</h3>
+            <p>
+                Atención ambulatoria en todas nuestras especialidades para el
+                diagnóstico tratamiento e intervenciones menores de patologías
+                comunes y complejas de nuestros pacientes
+            </p>
+        </div>
+        <img
+                src="assets/img/PlanSalud-consulta-externa-3.jpg"
+                alt=""
+        />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Farmacia</h3>
+            <p>
+                Dispensación de una amplia variedad de productos químicos
+                farmacéuticos las 24 horas del día al servicio de todos nuestros
+                afiliados
+            </p>
+        </div>
+        <img src="assets/img/PlanSalud-farmacia-1.jpg" alt="" />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Emergencias</h3>
+            <p>
+                Atención, procedimientos y exámenes médicos inmediatos de patologías
+                que ponen en riesgo la vida del paciente
+            </p>
+        </div>
+        <img src="assets/img/PlanSalud-emergencia-2.jpg" alt="" />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Hospitalización</h3>
+            <p>
+                Servicios orientados a la permanencia de pacientes en modernos
+                ambientes acondicionados especialmente para la recuperación y
+                tratamiento de enfermedades
+            </p>
+        </div>
+        <img
+                src="assets/img/PlanSalud-hospitalización-3.jpg"
+                alt=""
+        />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Enfermedades oncológicas</h3>
+            <p>Diagnóstico y tratamiento integral de pacientes con cáncer</p>
+        </div>
+        <img src="assets/img/plan-salud1.jpg" alt="" />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Maternidad</h3>
+            <p>
+                Cómodas instalaciones diseñadas exclusivamente para brindar una
+                atención integral tanto a la madre gestante y al recién nacido
+            </p>
+        </div>
+        <img src="assets/img/PlanSalud-maternidad-1.jpg" alt="" />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Chequeo médico anual</h3>
+            <p>
+                Evaluación médica preventiva con el fin de detectar de manera
+                temprana enfermedades y factores de riesgos en pacientes
+            </p>
+        </div>
+        <img src="assets/img/PlanSalud-chequeo-medico-1.jpg" alt="" />
+    </div>
+    <div class="consultas_type">
+        <div class="type_text">
+            <h3>Beneficios especiales</h3>
+            <p>
+                Ponemos a tu disposición amplios beneficios en nuestros diferentes
+                servicios
+            </p>
+        </div>
+        <img src="assets/img/PlanSalud-mas-beneficios-2.jpg" alt="" />
+    </div>
+</section>
+<!-- Beneficios -->
+<section class="container_beneficios">
+    <div class="beneficios">
+        <div class="beneficios_one">
             <h2>Beneficios</h2>
-            <p style="font-weight: bold;">La clínica VidaPlena, en su constante búsqueda por brindar a nuestra</p>
-            <p style="font-weight: bold;">comunidad de excelencia en servicios integrales de salud, ha desarrollado</p>
-            <p style="font-weight: bold;">planSalud, un programa con exclusivos beneficios del mercado</p>
+            <p>
+                La Clínica Vida Salud, en su constante búsqueda por brindar a
+                nuestra comunidad excelencia en servicios integrales de salud, ha
+                desarrollado PlanSalud, un programa con exclusivos beneficios en el
+                mercado
+            </p>
             <ul>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Mayor cobertura en servicios médicos.</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Afiliación sin límite de edad.</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Mayor beneficio anual por persona.</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Plantel médico exclusivo PlanSalud.</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Descuentos en medicamentos y laboratorio clínico.</li>
-                <!-- Agrega más elementos aquí -->
+                <li>Afiliación sin límite de edad</li>
+                <li>Mayor cobertura para enfermedades preexistentes</li>
+                <li>Mayor beneficio anual por persona</li>
+                <li>
+                    Más de 400 profesionales de la salud, más de 250 consultorios y
+                    más 170 camas de hospitalización a tu servicio
+                </li>
+                <li>Plantel médico exclusivo PlanSalud</li>
+                <li>Folleto: Comienza a prevenir desde hoy</li>
             </ul>
         </div>
-        <div class="image-container">
-            <img src="assets/img/beneficios.png" alt="Icono de beneficios">
-        </div>
-    </section>
-
-    <section class="section requisitos">
-        <div class="image-container">
-            <img src="assets/img/requisitos.png" alt="Icono de requisitos">
-        </div>
-        <div class="text-container">
+        <div class="beneficios_two">
             <h2>Requisitos</h2>
             <ul>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Fotocopia del documento de identidad del titular y cada dependiente.</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Fotocopia del documento de identidad del menor de edad.</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Fotocopia del acta de recién nacido (posterior se deberá regularizar con la copia del documento de identidad, obligatorio).</li>
-                <li class="list-item"><span class="check-icon">&#10003;</span>Pago del costo de inscripción y pago de la primera cuota mensual.</li>
-                <!-- Agrega más elementos aquí -->
+                <li>
+                    Fotocopia del documento de identidad del contratante, afiliado o
+                    representante legal de corresponder
+                </li>
+                <li>Fotocopia del documento de identidad del menor de edad</li>
+                <li>
+                    Fotocopia del acta de recién nacido (posteriormente se deberá
+                    regularizar con la copia del documento de identidad, obligatorio)
+                </li>
+                <li>
+                    Pago del costo de inscripción y pago de la primera cuota mensual
+                </li>
+                <li>
+                    Si deseas afiliarte a pago por débito de tarjeta Visa, el titular
+                    de la tarjeta deberá presentar fotocopia de la tarjeta a la cual
+                    se cargará la cuota y llenar el formulario
+                </li>
             </ul>
-            <div class="horario">
-                <p>Horario administrativo para PlanSalud:</p>
-                <p>Lunes a viernes, 08:00 a.m. a 06:00 p.m.</p>
-                <p>Sábados, 08:00 a.m. a 13:00 p.m.</p>
-            </div>
         </div>
-    </section>
-</main>
+    </div>
+</section>
 
 
 <footer>
